Atualizaçõa para Swing